[package]
name = "http-server"
version = "0.0.10"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command-line HTTP Server"
readme = "README.md"
repository = "https://github.com/EstebanBorai/http-server"
categories = ["web-programming", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "0.8"
clap = "2.33.3"
mime_guess = "2.0"
tiny_http = "0.6"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca" }
